Blatt 2: Falsch getippten Namen korrigiert.

--- a/sheet 2/DST 2.tex
+++ b/sheet 2/DST 2.tex
@@ -23,7 +23,7 @@
 \parindent 0pt
 
 \title{Foundations of representation theory \\ 2. exercise sheet}
-\author{Jendik Stelzner}
+\author{Jendrik Stelzner}
 \date{\today}
 
 \begin{document}
