Blatt 2-4: Titlestyle geändert.

--- a/sheet 2/DST 2.tex
+++ b/sheet 2/DST 2.tex
@@ -22,7 +22,7 @@
 
 \parindent 0pt
 
-\title{Foundations of representation theory \\ 2. exercise sheet}
+\title{\textsc{Foundations of representation theory \\ \Large 2. Exercise sheet}}
 \author{Jendrik Stelzner}
 \date{\today}
 
