--- a/sheet 3/DST 3.tex
+++ b/sheet 3/DST 3.tex
@@ -25,7 +25,7 @@
 
 \parindent 0pt
 
-\title{Foundations of representation theory \\ 3. exercise sheet}
+\title{\textsc{Foundations of representation theory \\ \Large 3. Exercise sheet}}
 \author{Jendrik Stelzner}
 \date{\today}
 
