--- a/sheet 4/DST 4.tex
+++ b/sheet 4/DST 4.tex
@@ -25,7 +25,7 @@
 
 \parindent 0pt
 
-\title{Foundations of representation theory \\ 4. exercise sheet}
+\title{\textsc{Foundations of representation theory \\ \Large 4. Exercise sheet}}
 \author{Jendrik Stelzner}
 \date{\today}
 
